# embaland

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  README.md  configure.ac  sonar-project.properties
.github/workflows/: build.yml
embaland/: Makefile.am  accessor.c  accessor.h  accessor_test.c  buffer.c  buffer.h  buffer_test.c  buffer_view.c  buffer_view.h  buffer_view_test.c  compiler.h  embaland.c  embaland.h  embaland_test.c  instance.c  instance.h  instance_test.c  list.c  list.h  list_test.c  material.c  material.h  material_test.c  mesh.c  mesh.h  mesh_test.c  object.c  object.h  object_test.c  platform.h  presenter.c  presenter.h  ref.c  ref.h  ref_test.c  string.c  string.h  string_mock.c  string_test.c  viewport.c  (+4 more)
emtriangle/: Makefile.am  embaland_mock.c  emtriangle.c  emtriangle.h  emtriangle_test.c  entry.c  glfw_mock.c  scene.c  scene.h  scene_mock.c  vulkan_mock.c
m4/: emb_enable_samples.m4  emb_enable_unit_tests.m4
samples/: Makefile.am  empty.c  triangle.c
